force-app/main/default/objects/Stock_Adjustment__c/Stock_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Stock Adjustment</label>
    <nameField>
        <displayFormat>SA{0000}</displayFormat>
        <label>Stock Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>