force-app/main/default/objects/Stock_Adjustment__c/fields/POS_User__c.field-meta.xml
<CustomField>
    <fullName>POS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stock Adjustments</relationshipLabel>
    <relationshipName>Stock_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>