force-app/main/default/objects/Stock_Adjustment__c/fields/Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Level</label>
    <referenceTo>Stock_Level__c</referenceTo>
    <relationshipLabel>Stock Adjustments</relationshipLabel>
    <relationshipName>Stock_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>