force-app/main/default/objects/Stock_Adjustment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Inventory</fullName>
            </value>
            <value>
                <fullName>Stock Take Adjustment</fullName>
            </value>
            <value>
                <fullName>Transfer Created</fullName>
            </value>
            <value>
                <fullName>Transfer Received</fullName>
            </value>
            <value>
                <fullName>Received From Supplier</fullName>
            </value>
            <value>
                <fullName>Returned To Supplier</fullName>
            </value>
            <value>
                <fullName>Inventory Added</fullName>
            </value>
            <value>
                <fullName>Inventory Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>